plugins {
    id 'java'
    id 'application'
}

group = "com.scalar-labs"
base {
    archivesName = "kelpie"
}

repositories {
    mavenCentral()
}

application {
    mainClass = 'com.scalar.kelpie.Kelpie'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
    withJavadocJar()
    withSourcesJar()
}

dependencies {

    // Core
    implementation 'com.google.inject:guice:7.0.0'
    implementation 'com.google.guava:guava:33.0.0-jre'
    implementation 'com.moandjiezana.toml:toml4j:0.7.2'
    implementation 'info.picocli:picocli:4.7.6'

    // JSON (migrated to Jakarta)
    implementation 'org.glassfish:javax.json:1.1.4'

    // Logging (safe replacement)
    implementation 'ch.qos.logback:logback-classic:1.4.14'

    implementation 'org.hdrhistogram:HdrHistogram:2.1.12'

    // Testing - Modernized
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
    testImplementation 'org.assertj:assertj-core:3.25.3'
    testImplementation 'org.mockito:mockito-core:5.10.0'
}

test {
    useJUnitPlatform()
}
